# Bosh-POC

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  script.bosh  test.bosh
src/: main.py
src/bosh/: __init__.py  error_handler.py
src/bosh/abstract_syntax/: ast_base.py  ast_domain.py  ast_expressions.py  ast_nodes.py  ast_statements.py
src/bosh/app/: controller.py  flags.py  print.py
src/bosh/executor/: environment.py  executor.py
src/bosh/interpreter/: analyzer.py  domain.py  environment.py  interpreter.py
src/bosh/parser/: ast_nodes.py  bosh_lang.lark  bosh_lang_no_WS_list.lark  parser.py
src/bosh/semantics/: symbol_table.py  type_checker.py
src/bosh/test/: test.py
src/json_parser/: test.json
src/main/pre_processer/: pre_processer.py
src/main/pre_processor/: pre_processor.py
src/parser/: bosh_lang.lark  bosh_lang_no_WS.lark
src/parser_test/: parser_test.py  test_lang.lark
src/test/: test.py
src/test/bosh_examples/: big_example.bosh  print_example.bosh  small_example.bosh
src/test/bosh_tests/: big_example.bosh
src/test/test_examples/: my_functions.py  my_test.py
src/test/test_large_strings/: test_large_strings.py
src/test/test_large_strings/strings/pre_processer/: full_pre_processer.test  indent1.test  indent2.test  indent3.test  indent4.test  indent5.test  whitespace.test
src/test/test_large_strings/strings/test_ast/: big_example.test  print_test.test  small_example.test
