[project]
name = "bosh"
version = "0.1.0"
description = "Beginner Oriented Shell"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "cs-26-dat-4-03", email = "cs-26-dat-4-03@student.aau.dk" }
]

dependencies = [
    "lark>=1.3.1",
]

[tool.uv]
package = true

[project.scripts]
main = "bosh.main.main:main"
test = "bosh.test.test:test"